return chronoblog-netlify-cms

--- a/.gitignore
+++ b/.gitignore
@@ -66,8 +66,8 @@ yarn.lock
 package-lock.json
 
 # starters and examples folder
-examples/*/*
-!examples/*/.gitkeep
+# examples/*/*
+# !examples/*/.gitkeep
 
 starters/*/*
 !starters/*/.gitkeep
