rm starters and examples

--- a/.gitignore
+++ b/.gitignore
@@ -66,8 +66,5 @@ yarn.lock
 package-lock.json
 
 # starters and examples folder
-# examples/*/*
-# !examples/*/.gitkeep
-
-starters/*/*
-!starters/*/.gitkeep
+examples
+starters
