upd publish-starters.yml

--- a/.github/workflows/publish-starters.yml
+++ b/.github/workflows/publish-starters.yml
@@ -23,6 +23,8 @@ jobs:
           node-version: 15
       - run: npm i
       - run: npm run generate-starters
+      - name: Check for folder
+        run: ./scripts/test.sh
 
       - name: Copy directory examples/${{ matrix.example }}/. to gatsby-starter-${{ matrix.example }} repository
         uses: andstor/copycat-action@v3.2.3
