--- a/.github/workflows/new-version.yml
+++ b/.github/workflows/new-version.yml
@@ -2,25 +2,42 @@ name: New Version
 
 on:
   push:
-    branches:
-      - master
   workflow_dispatch:
-
-env:
-  new-version-on-npm: false
 
 jobs:
   tests:
-    runs-on: ubuntu-latest
+    timeout-minutes: 220
+    name: Test ${{ matrix.starter_folder }} on node ${{ matrix.node_version }} and ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        node_version: [15]
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        starter_folder:
+          [
+            examples/chronoblog-netlify-cms,
+            starters/chronoblog,
+            starters/hacker,
+            starters/profile,
+            test-builds/content-tests,
+            test-builds/chinese-language-test,
+            test-builds/profile-minimal,
+          ]
     steps:
-      - name: Tests workflow
-        uses: benc-uk/workflow-dispatch@v1
+      - uses: actions/checkout@v2.3.4
+      - name: Use Node.js ${{ matrix.node_version }}
+        uses: actions/setup-node@v2.1.5
         with:
-          workflow: Tests
-          token: ${{ secrets.API_TOKEN_GITHUB }}
+          node-version: ${{ matrix.node_version }}
+
+      - run: npm i
+      - run: npm run generate-starters
+      - run: npm i
+      - run: cd ${{ matrix.starter_folder }} && npm run build
 
   publish-npm:
     needs: [tests]
+    if: github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2.3.4
