--- a/packages/gatsby-theme-chronoblog/package.json
+++ b/packages/gatsby-theme-chronoblog/package.json
@@ -31,40 +31,39 @@
     "start": "gatsby develop"
   },
   "dependencies": {
-    "@babel/core": "^7.10.2",
-    "@emotion/core": "^10.0.28",
-    "@fortawesome/fontawesome-svg-core": "^1.2.25",
-    "@fortawesome/free-brands-svg-icons": "^5.11.2",
-    "@fortawesome/free-solid-svg-icons": "^5.11.2",
-    "@fortawesome/react-fontawesome": "^0.1.7",
-    "@mdx-js/mdx": "^1.6.5",
-    "@mdx-js/react": "^1.6.5",
-    "@reach/router": "^1.3.3",
-    "@theme-ui/components": "0.2.50",
-    "@theme-ui/match-media": "0.2.52",
-    "@theme-ui/preset-base": "0.2.44",
-    "@theme-ui/prism": "0.2.50",
-    "debug": "^4.1.1",
-    "gatsby-image": "^2.4.7",
-    "gatsby-plugin-emotion": "^4.3.4",
-    "gatsby-plugin-mdx": "^1.2.15",
-    "gatsby-plugin-page-creator": "^2.3.9",
-    "gatsby-plugin-react-helmet": "^3.3.4",
-    "gatsby-plugin-sharp": "^2.6.11",
+    "@babel/core": "7.13.10",
+    "@emotion/core": "10.1.1",
+    "@fortawesome/fontawesome-svg-core": "1.2.35",
+    "@fortawesome/free-brands-svg-icons": "5.15.3",
+    "@fortawesome/free-solid-svg-icons": "5.15.3",
+    "@fortawesome/react-fontawesome": "0.1.14",
+    "@mdx-js/mdx": "1.6.22",
+    "@mdx-js/react": "1.6.22",
+    "@reach/router": "1.3.4",
+    "@theme-ui/components": "0.3.5",
+    "@theme-ui/match-media": "0.3.5",
+    "@theme-ui/preset-base": "0.3.5",
+    "@theme-ui/prism": "0.3.5",
+    "gatsby-image": "2.11.0",
+    "gatsby-plugin-emotion": "4.5.0",
+    "gatsby-plugin-mdx": "1.10.1",
+    "gatsby-plugin-page-creator": "2.10.1",
+    "gatsby-plugin-react-helmet": "3.10.0",
+    "gatsby-plugin-sharp": "2.14.3",
     "gatsby-plugin-theme-ui": "0.2.53",
-    "gatsby-remark-images": "^3.3.10",
-    "gatsby-remark-responsive-iframe": "^2.4.5",
-    "gatsby-source-filesystem": "^2.3.11",
-    "gatsby-transformer-sharp": "^2.5.5",
-    "lodash": "^4.17.15",
-    "normalize-url": "^4.5.0",
-    "react-headroom": "^3.0.0",
-    "react-helmet": "^6.1.0",
-    "react-hover-observer": "^2.1.1",
-    "remark-slug": "^5.1.2",
-    "remark-unwrap-images": "^0.2.0",
+    "gatsby-remark-images": "3.11.1",
+    "gatsby-remark-responsive-iframe": "2.11.0",
+    "gatsby-source-filesystem": "2.11.1",
+    "gatsby-transformer-sharp": "2.12.1",
+    "lodash": "4.17.21",
+    "normalize-url": "4.5.0",
+    "react-headroom": "3.1.0",
+    "react-helmet": "6.1.0",
+    "react-hover-observer": "2.1.1",
+    "remark-slug": "5.1.2",
+    "remark-unwrap-images": "0.2.0",
     "theme-ui": "0.2.52",
-    "url-join": "^4.0.1"
+    "url-join": "4.0.1"
   },
   "devDependencies": {
     "gatsby": "^2.23.3",
