--- a/packages/gatsby-theme-chronoblog/package.json
+++ b/packages/gatsby-theme-chronoblog/package.json
@@ -44,12 +44,12 @@
     "@theme-ui/match-media": "0.2.52",
     "@theme-ui/preset-base": "0.2.44",
     "@theme-ui/prism": "0.2.50",
-    "gatsby-image": "^2.4.7",
-    "gatsby-plugin-emotion": "^4.3.4",
-    "gatsby-plugin-mdx": "^1.2.15",
-    "gatsby-plugin-page-creator": "^2.3.9",
-    "gatsby-plugin-react-helmet": "^3.3.4",
-    "gatsby-plugin-sharp": "^2.6.11",
+    "gatsby-image": "2.11.0",
+    "gatsby-plugin-emotion": "4.5.0",
+    "gatsby-plugin-mdx": "1.10.1",
+    "gatsby-plugin-page-creator": "2.10.1",
+    "gatsby-plugin-react-helmet": "3.10.0",
+    "gatsby-plugin-sharp": "2.14.3",
     "gatsby-plugin-theme-ui": "0.2.53",
     "gatsby-remark-images": "^3.3.10",
     "gatsby-remark-responsive-iframe": "^2.4.5",
