--- a/packages/gatsby-theme-chronoblog/package.json
+++ b/packages/gatsby-theme-chronoblog/package.json
@@ -51,10 +51,10 @@
     "gatsby-plugin-react-helmet": "3.10.0",
     "gatsby-plugin-sharp": "2.14.3",
     "gatsby-plugin-theme-ui": "0.2.53",
-    "gatsby-remark-images": "3.11.1",
-    "gatsby-remark-responsive-iframe": "2.11.0",
-    "gatsby-source-filesystem": "2.11.1",
-    "gatsby-transformer-sharp": "2.12.1",
+    "gatsby-remark-images": "^3.3.10",
+    "gatsby-remark-responsive-iframe": "^2.4.5",
+    "gatsby-source-filesystem": "^2.3.11",
+    "gatsby-transformer-sharp": "^2.5.5",
     "lodash": "^4.17.15",
     "normalize-url": "^4.5.0",
     "react-headroom": "^3.0.0",
