--- a/packages/gatsby-theme-chronoblog/package.json
+++ b/packages/gatsby-theme-chronoblog/package.json
@@ -55,11 +55,11 @@
     "gatsby-remark-responsive-iframe": "2.11.0",
     "gatsby-source-filesystem": "2.11.0",
     "gatsby-transformer-sharp": "2.12.0",
-    "lodash": "^4.17.15",
-    "normalize-url": "^4.5.0",
-    "react-headroom": "^3.0.0",
-    "react-helmet": "^6.1.0",
-    "react-hover-observer": "^2.1.1",
+    "lodash": "4.17.21",
+    "normalize-url": "4.5.0",
+    "react-headroom": "3.1.0",
+    "react-helmet": "6.1.0",
+    "react-hover-observer": "2.1.1",
     "remark-slug": "^5.1.2",
     "remark-unwrap-images": "^0.2.0",
     "theme-ui": "0.2.52",
