--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint-plugin-simple-import-sort": "7.0.0",
     "fs-extra": "8.1.0",
     "identity-obj-proxy": "3.0.0",
+    "lodash": "^4.17.21",
     "prettier": "2.2.1",
     "typescript": "4.1.5"
   },
