--- a/.github/workflows/new-push.yml
+++ b/.github/workflows/new-push.yml
@@ -5,7 +5,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  tests:
+  test-starter-builds:
     timeout-minutes: 220
     name: Test ${{ matrix.starter_folder }} on node ${{ matrix.node_version }} and ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
@@ -37,8 +37,38 @@ jobs:
           npm i
           npm run build
 
+  test-workspace-builds:
+    timeout-minutes: 220
+    name: Test ${{ matrix.starter_folder }} on node ${{ matrix.node_version }} and ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        node_version: [15]
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        starter_folder:
+          [
+            examples/chronoblog-netlify-cms,
+            starters/chronoblog,
+            starters/chronoblog-hacker,
+            starters/chronoblog-profile,
+            test-builds/chronoblog-test-content,
+            test-builds/chronoblog-test-chinese-language,
+            test-builds/chronoblog-profile-test-minimal,
+          ]
+    steps:
+      - uses: actions/checkout@v2.3.4
+      - name: Use Node.js ${{ matrix.node_version }}
+        uses: actions/setup-node@v2.1.5
+        with:
+          node-version: ${{ matrix.node_version }}
+
+      - run: npm i
+      - run: npm run generate-starters
+      - run: npm i
+      - run: cd ${{ matrix.starter_folder }} && npm run build
+
   publish-npm:
-    needs: [tests]
+    needs: [test-starter-builds, test-workspace-builds]
     if: github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
     steps:
@@ -57,7 +87,7 @@ jobs:
           echo "Version changed: ${{ steps.publish.outputs.old-version }} => ${{ steps.publish.outputs.version }}"
 
   publish-starters:
-    needs: [tests]
+    needs: [test-starter-builds, test-workspace-builds]
     if: github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
     steps:
