--- a/packages/feed/package.json
+++ b/packages/feed/package.json
@@ -5,9 +5,18 @@
   "description": "Chronoblog Feed",
   "license": "MIT",
   "author": "Ivan Ganev <ganevio92@gmail.com>",
+  "main": "dist/index.js",
+  "files": [
+    "/dist",
+    "package.json"
+  ],
+  "scripts": {
+    "build": "tsc"
+  },
   "peerDependencies": {
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "typescript": "^4.3.5"
   },
   "engines": {
     "node": ">=16.0.0"
