--- a/package.json
+++ b/package.json
@@ -9,10 +9,8 @@
     "starters/*",
     "test-builds/*"
   ],
-  "scripts": {
-    "build": "cd packages/feed && npm run build",
-    "dev": "npm run build && npm run dev:chronoblog",
-    "dev:chronoblog": "cd test-builds/next-test-build-chronoblog && npm run dev"
+  "scripts" : {
+    "start" : "make start"
   },
   "devDependencies": {
     "@types/node": "16.6.1",
