--- a/packages/feed/package.json
+++ b/packages/feed/package.json
@@ -13,10 +13,12 @@
   "scripts": {
     "build": "tsx"
   },
+  "devDependencies": {
+    "typescript": "4.3.5"
+  },
   "peerDependencies": {
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "typescript": "^4.3.5"
+    "react-dom": "^17.0.2"
   },
   "engines": {
     "node": ">=16.0.0"
