--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
-    "target": "es5",
+    "module": "ES6",
+    "target": "ES6",
     "lib": ["es6", "dom", "es2016", "es2017"],
     "jsx": "react",
     "declaration": true,
