--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@typescript-eslint/parser": "4.29.1",
     "eslint": "7.32.0",
     "eslint-config-prettier": "8.3.0",
+    "eslint-config-react-app": "6.0.0",
     "eslint-plugin-html": "6.1.2",
     "eslint-plugin-import": "2.24.0",
     "eslint-plugin-jsx-a11y": "6.4.1",
