--- a/packages/feed/package.json
+++ b/packages/feed/package.json
@@ -7,6 +7,11 @@
   "author": "Ivan Ganev <ganevio92@gmail.com>",
   "main": "./src/index.js",
   "types": "./src/index.d.ts",
+  "dependencies": {
+    "tailwindcss": "^2.2.7",
+    "autoprefixer": "^10.2.6",
+    "postcss": "^8.3.5"
+  },
   "peerDependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
