--- a/packages/feed/package.json
+++ b/packages/feed/package.json
@@ -8,7 +8,9 @@
   "main": "./src/index.js",
   "types": "./src/index.d.ts",
   "dependencies": {
-    "tailwindcss": "^2.2.7",
+    "tailwindcss": "^2.2.7"
+  },
+  "devDependencies": {
     "autoprefixer": "^10.2.6",
     "postcss": "^8.3.5"
   },
