--- a/packages/feed/package.json
+++ b/packages/feed/package.json
@@ -8,12 +8,11 @@
   "main": "./src/index.js",
   "types": "./src/index.d.ts",
   "dependencies": {
-    "tailwindcss": "^2.2.7"
-  },
-  "devDependencies": {
+    "tailwindcss": "^2.2.7",
     "autoprefixer": "^10.2.6",
     "postcss": "^8.3.5"
   },
+  "devDependencies": {},
   "peerDependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
