--- a/package.json
+++ b/package.json
@@ -10,12 +10,11 @@
     "test-builds/*"
   ],
   "scripts": {
-    "clean": "rm -rf node_modules && rm -rf package-lock.json && rm -rf test-builds/next-app/.next && rm -rf test-builds/next-app-tw/.next",
     "build": "tsc",
-    "dev": "tsc -watch",
+    "clean": "rm -rf node_modules && rm -rf package-lock.json && rm -rf test-builds/next-app/.next && rm -rf test-builds/next-app-tw/.next",
+    "dev": "npm run dev:next-app-tw",
     "dev:next-app": "cd test-builds/next-app && npm run dev",
-    "dev:next-app-tw": "cd test-builds/next-app-tw && npm run dev",
-    "start": "npm run dev:next-app-tw"
+    "dev:next-app-tw": "cd test-builds/next-app-tw && npm run dev"
   },
   "devDependencies": {
     "@types/node": "16.6.1",
