--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,5 +16,6 @@
     "suppressImplicitAnyIndexErrors": true,
     "allowSyntheticDefaultImports": true,
     "strict": true
-  }
+  },
+  "exclude": ["node_modules"]
 }
