--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# Nodejs
+
 # Logs
 logs
 *.log
@@ -32,6 +34,38 @@ node_modules/
 # dotenv environment variables file
 .env
 .env.test
+
+# Apple Mac
+
+# General
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+# Project specific 
 
 # ignore dist folders
 packages/**/dist
