--- a/packages/feed/package.json
+++ b/packages/feed/package.json
@@ -5,8 +5,12 @@
   "description": "Chronoblog Feed",
   "license": "MIT",
   "author": "Ivan Ganev <ganevio92@gmail.com>",
-  "main": "./src/index.js",
-  "types": "./src/index.d.ts",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "files": [
+    "README.md",
+    "dist"
+  ],
   "devDependencies": {},
   "peerDependencies": {
     "react": "^17.0.2",
