--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,21 +1,22 @@
 {
   "compilerOptions": {
-    "module": "ES6",
-    "target": "ES6",
-    "lib": ["es6", "dom", "es2016", "es2017"],
-    "jsx": "react",
+    "allowSyntheticDefaultImports": true,
     "declaration": true,
-    "moduleResolution": "node",
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
     "esModuleInterop": true,
+    "jsx": "react",
+    "lib": ["dom", "esnext"],
+    "module": "esnext",
+    "moduleResolution": "node",
+    "noImplicitAny": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
-    "noImplicitAny": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "sourceMap": true,
+    "strict": true,
     "strictNullChecks": true,
     "suppressImplicitAnyIndexErrors": true,
-    "allowSyntheticDefaultImports": true,
-    "strict": true
+    "target": "ES5"
   },
   "exclude": ["node_modules"]
 }
