--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   ],
   "scripts": {
     "build": "cd packages/feed && tsc",
+    "watch": "cd packages/feed && tsc --watch",
     "clean": "rm -rf node_modules && rm -rf package-lock.json && rm -rf test-builds/next-app/.next && rm -rf test-builds/next-app-tw/.next",
     "dev": "npm run dev:next-app-tw",
     "dev:next-app": "cd test-builds/next-app && npm run dev",
